# LocoHFT

./: .gitignore  Cargo.toml  README.md  build-standalone.bat
.cargo/: config.toml
python/: analytics.py  recommendations.py  strategy.py
src/: engine.rs  main.rs  python_bridge.rs
